SafeLoggingPropagation doesn't attempt to annotate anonymous classes (#2227)
SafeLoggingPropagation doesn't attempt to annotate anonymous classes